- new parameter sepapersplocal to decide whether local cuts can be used for perspective cuts for indicator contraints
- new parameter branching/relpscost/usesmallweightsitlim to use smaller weights for pseudo cost updates when LP iteration limit was hit
- new parameter lp/randomseed to set the initial seed of the LP solver

performance improvements:
- changed value of parameter separating/clique/cliquedensity to 0.0 such that the separator always constructs a dense clique table
  which proved to be faster on the benchmarks MMM and stableset.

interface:
- spx2 is the new default LP solver interface
- new function SCIPsolveProbingRelax() to solve a relaxation within probing
- new function SCIPgetIntVarXor() to access integer variable of XOR constraints
- new function SCIPgetLastStrongbranchingLPSolstat() to query the LP statuses after strong branching on a variable
- next to the number of found solution, also the number of new best solutions is now printed for each heuristic
  (and relaxation solutions) in the statistics in the "Primal Heuristic" section.
- CONSINITLP callback now has a new parameter 'infeasible', which is a pointer to store whether infeasibility
  was detected while building the initial LP relaxation
- new function SCIPisDualSolAvailable() to query the dual solution availability

fixed bugs:

misc:
- dropped support for Ipopt < 3.11


SCIP version 3.2.2
==================

fixed bugs:
- fixed bug in XML reader concerning comments
- fixed wrong representation of SOC constraints in NLP
- fixed possible segmentation fault in genvbounds propagator
- fixed bug with solutions from previous runs not satisfying an objective limit
- the AMPL interface now writes a solve status (solve_result_num) into the .sol file
- fix wrong propagation of product expressions
- fix memory leaks in TSP example
- return SCIP_ERROR when a memory exception is caught in SoPlex (was SCIP_LPERROR)